--- a/login.html
+++ b/login.html
@@ -192,7 +192,7 @@ href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css"
        Good to see you again! <strong style="color:#D506E7;">Welcome back. </strong>
                 </p>
                 <hr>
-<form action="dashboard.html" method="post">
+<form action="dashboard.html" >
              
 
                 <label> Email </label>
